--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -1,4 +1,27 @@
-body {
+@import '_vars';
+
+html, body {
   margin: 0px;
   padding: 0px;
+  background-color: $background-color;
+  color: $text-color;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 200;
+  font-size: 1em;
+  width: 100%;
+}
+
+ul, section, nav {
+  margin: 0px;
+  padding: 0px;
+}
+
+main {
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.small-element {
+  width: 480px;
 }
