--- a/app/static/stylesheets/application.css
+++ b/app/static/stylesheets/application.css
@@ -1,69 +1,1 @@
-form {
-  margin: 0 auto; }
-  form .caption {
-    font-size: 2em; }
-  form input.xs-small {
-    width: 30px; }
-  form .form-entry {
-    line-height: 1.5em; }
-    form .form-entry .caption {
-      font-size: 1em;
-      width: 100px;
-      min-width: 100px;
-      display: inline-block; }
-
-html, body {
-  margin: 0px;
-  padding: 0px;
-  background-color: #333333;
-  color: #F3F3F3;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-weight: 200;
-  font-size: 1em;
-  width: 100%; }
-
-ul, section, nav {
-  margin: 0px;
-  padding: 0px; }
-
-main {
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px; }
-
-.small-element {
-  width: 480px; }
-
-#messages {
-  padding: 0px;
-  margin: 0px;
-  background-color: #F3F3F3; }
-  #messages ul {
-    padding: 5px; }
-  #messages .info {
-    color: green; }
-  #messages .error {
-    color: red; }
-
-nav.top-nav {
-  width: 100%;
-  height: 3em;
-  padding: 0px;
-  margin: 0px;
-  background: #030303;
-  color: #FFFFFF; }
-
-ul.top-nav {
-  padding: 0px;
-  margin: 0px;
-  list-style: none; }
-  ul.top-nav li {
-    width: 100px;
-    display: inline-block;
-    line-height: 2.5em; }
-  ul.top-nav a {
-    padding-left: 5px;
-    color: #FFFFFF;
-    text-decoration: none; }
-  ul.top-nav a:hover {
-    color: #C3C3C3; }
+body,html,nav,section,ul{margin:0;padding:0}form{margin:0 auto}form .caption{font-size:2em}form input.xs-small{width:30px}form .form-entry{line-height:1.5em}form .form-entry .caption{font-size:1em;width:100px;min-width:100px;display:inline-block}body,html{background-color:#333;color:#F3F3F3;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:200;font-size:1em;width:100%}main{margin-top:10px;margin-left:10px;margin-right:10px}.small-element{width:480px}#messages{padding:0;margin:0;background-color:#F3F3F3}#messages ul{padding:5px}#messages .info{color:green}#messages .error{color:red}nav.top-nav{width:100%;height:3em;padding:0;margin:0;background:#030303;color:#FFF}ul.top-nav{padding:0;margin:0;list-style:none}ul.top-nav li{width:100px;display:inline-block;line-height:2.5em}ul.top-nav a{padding-left:5px;color:#FFF;text-decoration:none}ul.top-nav a:hover{color:#C3C3C3}
